Deluge 1.1.1 - (In Development)
 Core:
  * Fix oldstateupgrader for those upgrading from 0.5.x

 GtkUI:
  * Fix opening links from Help menu and others
  * Fix remembering sorted column in the torrent list
  * Fix saving Files tab and Peers tab state
  * Disable popup notification in preferences on Windows

 Misc:
  * Fix bdecoding some torrent files
  * Fix the -l, --logfile option
  * Fix #729 tracker icons not being saved in the correct location
  * Add support for more tracker icons
  * Fix being able to connect to a local daemon from another user account

Deluge 1.1.0 - "Time gas!" (10 January 2009)
 Core:
  * Fix issue in get_tracker_host when the torrent has no tracker
  * Fix crash while trying to convert very old 0.5 config files

 GtkUI:
  * Fix translation setting in remove torrent dialog
  * Fix notification bug on startup for already finished torrents

 Ajaxui:
  * Fix loading on iPods.
  * Fix sorting on the name column.
  * Add "Not Implemented" alerts to some functions.
  * Improve the options tab on the Add Torrent dialog

 ConsoleUI:
  * Fix auto-complete feature for torrents.

 Misc:
  * Added '-s', '--set-default-ui' option to deluge

Deluge 1.1.0_RC3 (05 January 2009)
 Core:
  * Fix applying proxy settings
  * Fix the display of the tracker host when it's an IP address and not a hostname

 GtkUI:
  * Fix folder renaming to display the change properly
  * Fix seeding torrents from moving around when sorting the '#' column

 Plugins:
  * Label: Fix move on completed
  * Add 'PeerGuardian Text (GZip)' reader to the Blocklist plugin
  * Apply Blocklist preferences when clicking on the buttons

Deluge 1.1.0_RC2 (29 December 2008)
 Core:
  * Fix new version check
  * Fix issue that prevented torrents from being added

 GtkUI:
  * Fix tooltip for 'Show session speed in titlebar' option

 Plugins:
  * Remove Stats plugin since it wasn't intended to be in this release
  * Fix never-ending import in Blocklist on Windows

 Windows: